fix: overflow layout on mobile view border box

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,6 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Saira:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 .container-gradient {
+  box-shadow: 0 0 0 2px #000027;
   min-height: 80vh;
   min-width: 100vw;
   background: radial-gradient(
@@ -15,6 +16,7 @@
 }
 
 .container-mini-gradient {
+  box-shadow: 0 0 0 2px #000027;
   min-height: 80vh;
   min-width: 100vw;
   background: radial-gradient(
@@ -30,7 +32,7 @@
 }
 
 .container {
-  box-shadow: 0 0 0 1px black;
+  box-shadow: 0 0 0 2px #000027;
   min-height: auto;
   min-width: 100vw;
   background: radial-gradient(
@@ -41,11 +43,12 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  border: none;
+  overflow: none;
 }
+
 .bg-container {
-  box-shadow: 0 0 0 1px black;
-  min-width: 100vw;
+  box-shadow: 0 0 0 2px #000027;
+  width: 100vw;
   background: radial-gradient(
     67.1% 81.39% at 90.69% 8.11%,
     #000027 10.56%,
@@ -63,18 +66,13 @@
 
 * {
   margin: 0;
-  border-color: linear-gradient(
-    to right bottom,
-    rgb(17, 24, 39),
-    rgb(22, 26, 31)
-  );
-  /* box-sizing: border-box; */
+  box-sizing: border-box;
   font-family: 'Saira', -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
     Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
 body {
-  max-width: 100vw;
+  width: 100vw;
   overflow-x: hidden;
 }
 
